fixed spacing

--- a/css/index.css
+++ b/css/index.css
@@ -205,6 +205,9 @@ header {
 .aboutContentContainer:nth-child(4) {
     margin-right: 10px;
 }
+.aboutContentContainer h2 {
+    margin-top: 7px;
+}
 .aboutWrapperContent {
     width: 100%;
     padding: 0px 2%;
@@ -217,9 +220,6 @@ header {
 #topWrapper p {
     margin-bottom: 20px;
 }
-/* #bottomWrapper {
-    margin-top: 40px;
-} */
 #bottomWrapper p {
     margin-bottom: 40px;
 }
@@ -229,6 +229,7 @@ button {
     padding: 5px 20px;
     border: 2px solid black;
     font-size: 16px;
+    margin-top: 15px;
 }
 footer {
     width: 100%;
